--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,8 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #b00202;
+$secondary-color: #c30000;
+// $primary-color: #02aab0;
+// $secondary-color: #00cdac;
 
 $white-color: #fff;
 
